# Looky

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: README.md  build.yml
QuickLookStep/: SceneBuilder.swift  ThreeMFImporter.swift  foxtrot.h
QuickLookStep/QuickLookStep/: EdgeShapeDetector.swift  HoverSelection.swift  Info.plist  QuickLookStepApp.swift  QuickLookStepHostView.swift  SceneKitView.swift  SceneSelectionEngine.swift  SelectionController.swift  SelectionDebugModels.swift  SelectionDebugRecorder.swift  SelectionDebugging.swift  SelectionDistanceBackend.swift  SelectionEdgePathResolver.swift  SelectionEdgePrimitiveFitter.swift  SelectionGeometryReader.swift  SelectionInteraction.swift  SelectionKernels.metal  SelectionMeasurementPanel.swift  SelectionMeasurements.swift  SelectionMetalAccelerator.swift  SelectionModel.swift  SelectionModelBuilder.swift  SelectionOverlayRenderer.swift  SelectionProbes.swift  SelectionResolution.swift  SelectionRuntimeTypes.swift  SelectionTopology.swift  SelectionTopologyEngine.swift  TestingSupport.swift  ViewerHostDiagnostics.swift  ViewerSelectionDriver.swift  ViewerSession.swift  ViewerTestDriver.swift
QuickLookStep/QuickLookStep.xcodeproj/: project.pbxproj
QuickLookStep/StepPreview/: Info.plist  PreviewViewController.swift
QuickLookStep/StepThumbnail/: Info.plist  ThumbnailProvider.swift
ffi/: Cargo.toml
ffi/src/: lib.rs
testing/: README.md
testing/diagnostics/: 3mf-native-importer.md  stl-obj-quicklook-registration.md
testing/scripts/: run-sample.sh  (+5 more)
(+109 files in other folders)
