[package]
name    = "foxtrot_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
nalgebra-glm = "0.13.0"
triangulate = { version = "0.1", default-features = false, features = ["parallel"] }
step = { version = "0.1", default-features = false, features = ["parallel"] }

[profile.release]
panic = "unwind"
